tests/machine/x/ocaml/map_membership.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/map_membership.ml", line 21, characters 32-48:
21 | let m : (string * Obj.t) list = { a = 1; b = 2 }
                                     ^^^^^^^^^^^^^^^^
Error: This expression should not be a record, the expected type is
       (string * Obj.t) list


Context (around line 21):
  19 | type record1 = { mutable a : int; mutable b : int }
  20 | 
  21 | let m : (string * Obj.t) list = { a = 1; b = 2 }
  22 | 
  23 | let () =
